--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "@react-email/components": "^0.0.11",
         "@react-email/render": "^0.0.9",
         "@react-email/tailwind": "^0.0.12",
-        "@sparticuz/chromium": "^127.0.0",
+        "@sparticuz/chromium": "^129.0.0",
         "@sparticuz/chromium-min": "^133.0.0",
         "@types/node": "20.6.2",
         "@vercel/analytics": "^1.1.1",
@@ -55,7 +55,8 @@
         "number-to-words": "^1.2.4",
         "popover": "^2.4.1",
         "postcss": "8.4.31",
-        "puppeteer-core": "^22.15.0",
+        "puppeteer": "^24.10.0",
+        "puppeteer-core": "^23.11.1",
         "react": "18.2.0",
         "react-day-picker": "^8.8.2",
         "react-dom": "18.2.0",
@@ -85,7 +86,6 @@
         "@types/react-signature-canvas": "^1.0.4",
         "@types/xml2js": "^0.4.13",
         "cross-env": "^7.0.3",
-        "ignore-loader": "^0.1.2",
-        "puppeteer": "^22.15.0"
+        "ignore-loader": "^0.1.2"
     }
 }
